# elf_data_splitter

./: CMakeLists.txt  PROJECT_STRUCTURE.txt  README.md  create_project.sh  p_lx_elf.cpp  setup_all.sh
include/: elf_splitter.h
src/: common.cpp  common.h  elf_parser.cpp  elf_parser.h  elf_splitter.cpp  elf_splitter.h  main.cpp  offset_calculator.cpp  offset_calculator.h  segment_handler.cpp  segment_handler.h  stub_generator.cpp  stub_generator.h  stub_injector.cpp  stub_injector.h
tests/: test_splitter.cpp
